# Parallel

./: .gitignore  Readme.md
KMeans/: .gitignore  CMakeLists.txt  Readme.md  plot.py  plot_clusters.py
KMeans/.cache/clangd/index/: KMeans.cpp.AB7FEC4354C0FFC6.idx  KMeans.h.560BB636D7929350.idx  main.cpp.0DA49C8E81D0D1D2.idx
KMeans/data/: 100000_3.csv  10000_3.csv  1000_3.csv  100_3.csv
KMeans/include/: KMeans.h
KMeans/results/: 30_summary.csv  final_summary.csv  summary.csv  summary_backup.csv
KMeans/results/plots/: assignments_par_n1000000_k3_t12.csv  assignments_par_n10000_k3_t1.csv  assignments_par_n10000_k5_t2.csv  assignments_par_n1000_k3_t10.csv  assignments_seq_n1000000_k3.csv  centroids_par_n1000000_k3_t5.csv  centroids_par_n10000_k3_t10.csv  centroids_par_n10000_k5_t8.csv  centroids_par_n1000_k3_t6.csv
KMeans/src/: CMakeLists.txt  KMeans  KMeans.cpp  ParallelKMeans.cpp  ParallelKMeans.h  SequentialKMeans.cpp  SequentialKMeans.h  dataset.cpp  dataset.h  main.cpp  sequentialKMeans.cpp
KernelImageProcessing/: CMakeLists.txt  KernelApp  Readme.md  plot.py
KernelImageProcessing/generated_images/: 1024x1024_img3.tiff  256x256_img0.tiff  512x512_img2.tiff
KernelImageProcessing/include/: Convolution.h  GpuConvolution.h
KernelImageProcessing/output/: benchmark.csv  benchmark_blocksize.csv  benchmark_kernelsize.csv  benchmark_throughput.csv  dynamic_shared_benchmark_throughput.csv  old_benchmark_scaling.csv  shared_benchmark_blocksize.csv  shared_benchmark_kernelsize.csv  shared_benchmark_throughput.csv  stock_benchmark_blocksize.csv  stock_benchmark_throughput.csv
KernelImageProcessing/src/: BenchmarkSuite.cpp  BenchmarkSuite.h  CpuConvolution.cpp  CpuConvolution.h  GpuConvolution.cu  GpuConvolution.h  Kernels.cpp  Kernels.h  main.cpp
